fix checkbox align issue in Transfer

--- a/components/checkbox/style/mixin.less
+++ b/components/checkbox/style/mixin.less
@@ -8,10 +8,8 @@
 
     position: relative;
     top: 0.2em;
-    display: inline-block;
     line-height: 1;
     white-space: nowrap;
-    vertical-align: middle;
     outline: none;
     cursor: pointer;
 
@@ -156,6 +154,7 @@
     &.@{checkbox-prefix-cls}-wrapper-disabled {
       cursor: not-allowed;
     }
+
     & + & {
       margin-left: 8px;
     }
