--- a/components/transfer/style/index.less
+++ b/components/transfer/style/index.less
@@ -64,7 +64,7 @@
     &-header {
       display: flex;
       flex: none;
-      align-items: baseline;
+      align-items: center;
       height: @transfer-header-height;
       // border-top is on the transfer dom. We should minus 1px for this
       padding: (@transfer-header-vertical-padding - 1px) @control-padding-horizontal
@@ -121,9 +121,10 @@
       padding: 0;
       overflow: auto;
       list-style: none;
+
       &-item {
         display: flex;
-        align-items: flex-start;
+        align-items: center;
         min-height: @transfer-item-height;
         padding: @transfer-item-padding-vertical @control-padding-horizontal;
         line-height: @transfer-item-height - 2 * @transfer-item-padding-vertical;
@@ -207,6 +208,10 @@
 
     &-footer {
       border-top: @border-width-base @border-style-base @border-color-split;
+    }
+
+    &-checkbox .@{ant-prefix}-checkbox {
+      top: 0;
     }
   }
 
